src/test/ui/consts/const-eval/issue-50814.stderr
error: any use of this value will cause an error
  --> $DIR/issue-50814.rs:15:21
   |
LL |     const MAX: u8 = A::MAX + B::MAX;
   |     ----------------^^^^^^^^^^^^^^^-
   |                     |
   |                     attempt to compute `u8::MAX + u8::MAX`, which would overflow
   |
   = note: `#[deny(const_err)]` on by default

error[E0080]: evaluation of constant expression failed
  --> $DIR/issue-50814.rs:20:5
   |
LL |     &Sum::<U8,U8>::MAX
   |     ^-----------------
   |      |
   |      referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
